<resources>
    <string name="app_name">Health And Fitness Tracker</string>
    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="title_activity_navactivity">navactivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="facebook_app_id">193821794728481</string>
    <string name="facebook_login_protocol_scheme">fb193821794728481</string>
    <string name="action_settings">Settings</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="products">Select these default products to add onto the counter</string>
    <string name="save">Save</string>
    <string name="view_data">View Data</string>
    <string name="reset">Reset</string>
    <string name="pause">Pause</string>
    <string name="start">Start</string>
    <string name="logout">Logout</string>
    <string name="obese">Obese</string>
    <string name="overweight">Overweight</string>
    <string name="normal">Healthy Weight</string>
    <string name="underweight">Underweight</string>
    <string name="calculate">Calculate</string>
    <string name="weight">Weight(kg)</string>
    <string name="height">Height(cm)</string>
    <string name="bmi_calculator">BMI Calculator</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="steps_taken">Steps taken:</string>
    <string name="distance_covered">Distance Covered(m):</string>
    <string name="calories_burned">Calories Burned:</string>
    <string name="shuffle">Shuffle</string>


    <string name="title_activity_maps">Current Place Details</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="normal_map">Normal Map</string>
    <string name="distance">Distance:</string>
    <string name="registersign">Log in with your existing account.\nOR \nRegister now with a new account.</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="weekly_challenge">Weekly Challenge</string>
    <string name="update">Update</string>
    <string name="challenge_10_000_steps">Challenge: 10,000 Steps</string>
    <string name="switch_on">Switch On</string>
    <string name="switch_off">Switch Off</string>

</resources>
