<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="50sp"
        android:text="@string/weekly_challenge"
        android:gravity="center"/>

    <org.eazegraph.lib.charts.PieChart
        xmlns:eaze="http://schemas.android.com/apk/res-auto"
        android:id="@+id/graph"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/txt"
        eaze:egLegendHeight="0dp"
        eaze:egInnerPadding="75"
        eaze:egHighlightStrength="1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="114dp"
        android:text="@string/challenge_10_000_steps" />

    <Button
        android:id="@+id/update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="48dp"
        android:text="@string/update" />

</RelativeLayout>